#ifndef PROPERTY_CONTROLLER_H
#define PROPERTY_CONTROLLER_H

#include <string>
#include <headers/domain/shared/StringUtils.h>

class PropertyController {
public:
    std::string getAllProperties();
};

#endif //PROPERTY_CONTROLLER_H
